--- a/aframework/aframework-web/src/docs/api/asciidocs/apiList.adoc
+++ b/aframework/aframework-web/src/docs/api/asciidocs/apiList.adoc
@@ -1,57 +1,46 @@
-= AFramework 接口文档
-:doctype: book
-:icons: font
-:source-highlighter: highlightjs
-:toc: left 
-:sectlinks:
-
-= 一. 简介
-
- RESTful一种软件架构风格，设计风格而不是标准，只是提供了一组设计原则和约束条件。它主要用于客户端和服务器交互类的软件。基于这个风格设计的软件可以更简洁，更有层次，更易于实现缓存等机制 
-
-== 二. 接口列表
+include::F:\aframework-layer\aframework\aframework-web\src\docs\api\asciidocs\preview.adoc[]
 
 === 1.1 获取所有用户接口
 
 ==== request-headers 类型说明 
 
-include::F:\Java\JAFrameWorkLayer-Idea\JAFrameWorkLayer\aframework\aframework-web\target\generated-snippets\1.1 获取所有用户接口\request-headers.adoc[]
+include::F:\aframework-layer\aframework\aframework-web\target\generated-snippets\1.1 获取所有用户接口\request-headers.adoc[]
 
-==== http-request
+==== http-request 
 
-include::F:\Java\JAFrameWorkLayer-Idea\JAFrameWorkLayer\aframework\aframework-web\target\generated-snippets\1.1 获取所有用户接口\http-request.adoc[]
+include::F:\aframework-layer\aframework\aframework-web\target\generated-snippets\1.1 获取所有用户接口\http-request.adoc[]
 
-==== request-parameters类型说明
+==== request-parameters类型说明 
 
-include::F:\Java\JAFrameWorkLayer-Idea\JAFrameWorkLayer\aframework\aframework-web\target\generated-snippets\1.1 获取所有用户接口\request-parameters.adoc[]
+include::F:\aframework-layer\aframework\aframework-web\target\generated-snippets\1.1 获取所有用户接口\request-parameters.adoc[]
 
-==== request-body类型说明
+==== request-body类型说明 
 
-include::F:\Java\JAFrameWorkLayer-Idea\JAFrameWorkLayer\aframework\aframework-web\target\generated-snippets\1.1 获取所有用户接口\request-body.adoc[]
+include::F:\aframework-layer\aframework\aframework-web\target\generated-snippets\1.1 获取所有用户接口\request-body.adoc[]
 
-==== http-response
+==== http-response 
 
-include::F:\Java\JAFrameWorkLayer-Idea\JAFrameWorkLayer\aframework\aframework-web\target\generated-snippets\1.1 获取所有用户接口\http-response.adoc[]
+include::F:\aframework-layer\aframework\aframework-web\target\generated-snippets\1.1 获取所有用户接口\http-response.adoc[]
 
-==== response-fields 类型说明
+==== response-fields 类型说明 
 
-include::F:\Java\JAFrameWorkLayer-Idea\JAFrameWorkLayer\aframework\aframework-web\target\generated-snippets\1.1 获取所有用户接口\response-fields.adoc[]
+include::F:\aframework-layer\aframework\aframework-web\target\generated-snippets\1.1 获取所有用户接口\response-fields.adoc[]
 
 === 1.2 测试接口
 
-==== request-headers 类型说明
+==== request-headers 类型说明 
 
-include::F:\Java\JAFrameWorkLayer-Idea\JAFrameWorkLayer\aframework\aframework-web\target\generated-snippets\1.2 测试接口\request-headers.adoc[]
+include::F:\aframework-layer\aframework\aframework-web\target\generated-snippets\1.2 测试接口\request-headers.adoc[]
 
-==== http-request
+==== http-request 
 
-include::F:\Java\JAFrameWorkLayer-Idea\JAFrameWorkLayer\aframework\aframework-web\target\generated-snippets\1.2 测试接口\http-request.adoc[]
+include::F:\aframework-layer\aframework\aframework-web\target\generated-snippets\1.2 测试接口\http-request.adoc[]
 
-==== request-body类型说明
+==== request-body类型说明 
 
-include::F:\Java\JAFrameWorkLayer-Idea\JAFrameWorkLayer\aframework\aframework-web\target\generated-snippets\1.2 测试接口\request-body.adoc[]
+include::F:\aframework-layer\aframework\aframework-web\target\generated-snippets\1.2 测试接口\request-body.adoc[]
 
-==== http-response
+==== http-response 
 
-include::F:\Java\JAFrameWorkLayer-Idea\JAFrameWorkLayer\aframework\aframework-web\target\generated-snippets\1.2 测试接口\http-response.adoc[]
+include::F:\aframework-layer\aframework\aframework-web\target\generated-snippets\1.2 测试接口\http-response.adoc[]
 
